환경변수 외부설정 2 : property 사용

--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+<!--	@ConfigurationProperties 어노테이션을 사용하려면 META 정보를 생성해주는 의존성-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 
 	<build>
