SpringBoot Profile : prod, dev 프로파일 분리실행

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
-// 배너 이름을 banner.txt 가 아닌 다른 이름으로 설정하고 싶을 때
+# 배너 이름을 banner.txt 가 아닌 다른 이름으로 설정하고 싶을 때
 spring.banner.location=classpath:mybanner.txt
 
-// application 환경설정 외부에서 진행
+# application 환경설정 외부에서 진행
 myboot.name=Spring
 myboot.age=${random.int(1,100)}
 myboot.fullName=${myboot.name} Boot
+
+# profile 설정
+spring.profiles.active=dev
