--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,2 +1,8 @@
 myboot.name=\uc2a4\ud504\ub9c1 DevMode
 logging.level.com.ktds.myspringboot=debug
+
+# h2 db 은 in memory 디비이다. (내장)
+# connection url : http://localhost:8080/h2-console
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
