--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ myboot.age=${random.int(1,100)}
 myboot.fullName=${myboot.name} Boot
 
 # profile 설정
-spring.profiles.active=dev
+spring.profiles.active=prod
 
 # log 설정
 logging.file.path=logs
