--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,2 +1,13 @@
 myboot.name=\uc2a4\ud504\ub9c1 ProMode
 logging.level.com.ktds.myspringboot=info
+
+# maria db 설정
+spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/boot_db
+spring.datasource.username=boot
+spring.datasource.password=boot
+spring.datasource.driverClassName=org.mariadb.jdbc.Driver
+
+# JPA 설정
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
