--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -8,6 +8,6 @@ spring.datasource.password=boot
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
 
 # JPA 설정
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
