--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,9 @@ spring.profiles.active=prod
 
 # log 설정
 logging.file.path=logs
+
+# actuator 공개 옵션 조정
+management.endpoints.web.exposure.include=*
+
+# actuator admin UI 설정
+spring.boot.admin.client.url=http://localhost:8090
