--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
 	<properties>
 		<java.version>17</java.version>
 		<spring-framework.version>6.0.10</spring-framework.version>
+		<!--actuator admin 설정-->
+		<spring-boot-admin.version>3.0.4</spring-boot-admin.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -93,7 +95,32 @@
 			<version>3.1.1</version>
 		</dependency>
 
+		<!-- Actuator 사용-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
+		<!-- Actuator admin UI 사용-->
+		<dependency>
+			<groupId>de.codecentric</groupId>
+			<artifactId>spring-boot-admin-starter-client</artifactId>
+		</dependency>
+
 	</dependencies>
+
+	<!--actuator admin 설정-->
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>de.codecentric</groupId>
+				<artifactId>spring-boot-admin-dependencies</artifactId>
+				<version>${spring-boot-admin.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<build>
 		<plugins>
